# pinLocal

./: .gitignore  AGENTS.md  README.md  backup1.bat  eslint.config.js  git_diff_refactor.diff  index.html  littlecoder1.bat  package.json
.agent/instructions/: explain_code.md  senior_engineer.md
scratch/: ai_check.py  db_check.py  verify_db.py  verify_folders.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  git_diff.patch  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: embeddings.py  interface.py  requirements.txt  search.py  setup.py
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/ai/: config.rs  embeddings_store.rs  indexing_service.rs  mod.rs  model_manager.rs  search_orchestrator.rs  setup.rs  sidecar.rs  sync_worker.rs  vector_search.rs
src-tauri/src/commands/: ai.rs  boards.rs  images.rs  logging.rs  mod.rs  state.rs  workspace.rs
src-tauri/src/db/: boards.rs  images.rs  migrations.rs  mod.rs  schema.rs  workspaces.rs
src-tauri/src/services/: ai_lifecycle.rs  mod.rs  path_utils.rs  state_manager.rs  thumbnail_service.rs
src-tauri/src/workspace/: mod.rs  reconciler_actor.rs  thumbnail_actor.rs  watcher_actor.rs
src/components/ai/: AiDashboard.tsx  AiStatusDots.tsx  AiTerminal.tsx
src/components/images/: ImageCard.tsx  ImageGridContainer.tsx  Lightbox.tsx  MasonryGrid.tsx  SortControls.tsx
src/components/layout/: FileDropOverlay.tsx  PageHeader.tsx  Sidebar.tsx
src/components/ui/: dialog.tsx  popover.tsx  (+5 more)
src/hooks/: useAiEngine.ts  useAiSearchRescore.ts  useBoards.ts  useFileDrop.ts  useImages.ts  useInfiniteScroll.ts  useWorkspace.ts  useWorkspaceActions.ts  useWorkspaceSync.ts
src/lib/: logger.ts  tauri.ts  utils.ts
src/pages/: BoardPage.tsx  HomePage.tsx  SettingsPage.tsx  WelcomePage.tsx
src/stores/: statusStore.ts  uiStore.ts
src/types/: index.ts
