[package]
name = "pinlocal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pinlocal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
rayon = "1.10"
notify = "6.1"
thiserror = "1.0"
anyhow = "1.0"
bon = "2.3"
tempfile = "3.10"
chrono = "0.4"
ignore = "0.4"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2"
fast_image_resize = "4.0"
webp = "0.3.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crossbeam-channel = "0.5"
tauri-plugin-log = "2.0.0"
log = "0.4.29"
uuid = { version = "1.23.1", features = ["v4"] }
rand = "0.10.1"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
win32job = "2.0.3"
regex = "1.12.3"
byteorder = "1.5.0"
ndarray = "0.16"
dashmap = "6.1"
parking_lot = "0.12"
arc-swap = "1.7"
camino = { version = "1.1", features = ["serde1"] }
itertools = "0.13"
miette = { version = "7.2", features = ["fancy"] }
strum = { version = "0.26", features = ["derive"] }
derive_more = { version = "1.0", features = ["display", "from", "deref", "deref_mut"] }
getset = "0.1"
notify-debouncer-mini = "0.4.1"
delegate = "0.13"
tap = "1.0"
heck = "0.5"
dunce = "1.0"
trash = "5.2"

